nifi-on-aws/eks/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nifi
  labels:
    name: nifi
